Added Shimmer, filtering restaurants[search, top rated], react-router-dom

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Learning React</title>
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root">Nor rendered</div>
     <script type="module" src="./src/App.js"></script>
 </body>
 </html>
